src/styles/Hero.css
.hero {
  width: 100vw;
  height: 100vh;
  align-items: center;
  justify-content: center;
  background-color: #ececec;
}

.hero-content {
  width: 90%;
  max-width: 1200px;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.hero-text {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 1.5rem;
  padding: 2rem;
}

.hero-text h2 {
  font-size: 3rem;
  color: #1976d2;
  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.22);
}

.hero-text p {
  font-size: 1.2rem;
  color: #333;
}

.hero-text button {
  padding: 0.8rem 1.5rem;
  font-size: 1rem;
  background-color: #1976d2;
  color: white;
  border: none;
  border-radius: 8px;
  transition: background-color 0.3s ease, box-shadow 0.3s ease;
}

.hero-text button:hover {
  background-color: #145ea8;
  box-shadow: 0 0 25px 5px rgba(25, 118, 210, 0.6);
  cursor: pointer;
}

.hero-image {
  flex: 1;
  align-items: center;
  justify-content: center;
  position: relative;
  display: inline-block;
  width: 460px;
}
.hero-image::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  background: radial-gradient(circle, rgba(25, 118, 210, 0.7), transparent 70%);
  filter: blur(40px);
  z-index: 0;
}

.hero-image img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
  position: relative;
  z-index: 1;
  display: block;
}

@media (max-width: 1240px) {
  #hero {
    overflow: hidden;
    scroll-margin: 12vh;
  }

  .hero-image {
    flex: unset;
  }

  .hero-content {
    height: 100%;
  }

  .hero-text {
    align-items: center;
    text-align: center;
  }
}

@media (max-width: 600px) {
  .hero-text {
    gap: 0.5rem;
    padding: 0 1rem 0 1rem;
  }

  .hero-image {
    margin-top: -3rem;
  }

  .hero-text a {
    margin-top: 1.8rem; 
    margin-bottom: 1.5rem;
  }
}

@media (max-width: 400px) {
  .hero-text h2 {
    font-size: 2.5rem;
  }

  .hero-text p {
    font-size: 1rem;
  }
}

